--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -2,25 +2,18 @@
 @helper.base {
   <link href="@routes.Assets.at("styles/main.css")" rel="stylesheet">
 } {
-  <!-- <div id="content"></div> -->
-  <div="text-center">
+  <div class="text-center main-dashboard">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
-        <header-nav></header-nav>
+        <header></header>
       </header>
 
-      <h1><b>Sample Content</b></h1>
       <main role="main" class="inner cover">
         <div id="content"></div>
-        <!-- <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p> -->
       </main>
 
       <footer class="mastfoot mt-auto">
-        <footer-nav></footer-nav>
+        <footer></footer>
       </footer>
     </div>
   </div>
@@ -30,5 +23,4 @@
   <script src="@routes.Assets.at("comps/dashboard/contact.js")"></script>
   <script src="@routes.Assets.at("comps/dashboard/header-nav.js")"></script>
   <script src="@routes.Assets.at("comps/dashboard/footer-nav.js")"></script>
-  <script src="@routes.Assets.at("scripts/app.js")"></script>
 }
