--- a/app/views/helper/base.scala.html
+++ b/app/views/helper/base.scala.html
@@ -6,17 +6,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="rex ardiente" content="">
-  <link rel="icon" href="../../../../favicon.ico">
-  <link href="@routes.Assets.at("styles/global.css")" rel="stylesheet">
-  <link href="@routes.Assets.at("styles/global.min.css")" rel="stylesheet">
   <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(wja.locate("bootstrap.min.css"))">
   @* JavaScripts.. *@
   <script src="@routes.WebJarAssets.at(wja.locate("jquery.min.js"))"></script>
-  <script src="@routes.WebJarAssets.at(wja.locate("foundation.js"))"></script>
   <script src='@routes.WebJarAssets.at(wja.locate("riot.min.js"))'></script>
   <script src='@routes.WebJarAssets.at(wja.locate("lodash.min.js"))'></script>
   <script src="@routes.WebJarAssets.at(wja.locate("bootstrap.js"))"></script>
+  <script src="@routes.WebJarAssets.at(wja.locate("bootstrap.min.js"))"></script>
   <script src="https://cdn.jsdelivr.net/riotgear/latest/rg.min.js"></script>
+
   @pageMeta.toHtml
   @header
 </head>
@@ -24,5 +22,14 @@
   @content
 
   @footer
+  <script src="@routes.Assets.at("scripts/app.js")"></script>
+  <script src="@routes.Assets.at("scripts/main.js")"></script>
+  <script src="@routes.Assets.at("scripts/helpers.js")"></script>
+  <script>
+    window = {
+      classes: {},
+      app: {}
+    }
+  </script>
 </body>
 </html>
