Add - Login Page
- Sign in page and Sign out page

--- a/app/views/auth.scala.html
+++ b/app/views/auth.scala.html
@@ -2,14 +2,13 @@
 @helper.base {
   <link href="@routes.Assets.at("styles/auth.css")" rel="stylesheet">
 } {
-  <form class="form-signin">
-    <div id="content"></div>
-  </form>
+  <div id="content"  class="form-signin"></div>
 } {
   <script>
 
   </script>
-  <script src="@routes.Assets.at("comps/auth/register.js")"></script>
+  <script src="@routes.Assets.at("scripts/app.js")"></script>
+  <script src="@routes.Assets.at("comps/auth/logo.js")"></script>
   <script src="@routes.Assets.at("comps/auth/sign-in.js")"></script>
   <script src="@routes.Assets.at("comps/auth/sign-up.js")"></script>
 }
