--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,6 +1,6 @@
 @()(implicit header: RequestHeader, messages: Messages, pm: PageMeta, wja: WebJarAssets)
 @helper.base {
-  <link href="@routes.Assets.at("styles/main.css")" rel="stylesheet">
+  <link href="@routes.Assets.at("styles/dashboard.css")" rel="stylesheet">
 } {
   <div class="text-center main-dashboard">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
